2004-06-17  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/fusion.c (__pthread_set_periodic_rt,
	__pthread_wait_period_rt): Use new nucleus's built-in support for
	periodic timing.

	* skins/rtai/task.c (rt_task_set_periodic, rt_task_wait_period):
	Use new nucleus's built-in support for periodic timing.

	* nucleus/pod.c (xnpod_set_thread_periodic,
	xnpod_wait_thread_period): Add built-in support for periodic
	timing.

	* nucleus/shadow.c: Rollback some changes from the SMP port
	reinstating proper protection around critical sections.

2004-06-16  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/thread.h: Rename thread::timer to thread::rtimer
	for "resource timer" in order to comply with the other timer
	names.

	* nucleus/pod.c (xnpod_delete_thread): Stop the periodic timer
	before deleting the thread.

2004-06-15  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_realtime_sysentry): Properly return
	-ENOSYS upon syscall request without any skin loaded.

	* nucleus/pod.c (xnpod_schedule_runnable): Postpone
	xnsched_clr_resched() so that calls with XNPOD_NOSWITCH set don't
	clear it.

	* nucleus/pod.c (xnpod_schedule): Make sure we don't lose the
	rescheduling bit upon early exit.
	
	* nucleus/thread.c (xnthread_init): Add built-in support for
	periodic timing.

2004-06-13  Philippe Gerum  <rpm@xenomai.org>

	* scripts/rtai-load.in: Use modprobe instead of insmod for modules
	from /lib/modules.

2004-06-11  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c: Export event group interface.

	* skins/rtai/event.c: Add documentation.

2004-06-10  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/event.c: Fully implement the event flag group.

	* nucleus/pod.c (xnpod_init_thread): Discard magic parameter. Use
	xnthread_set_magic() after creation instead.

	* nucleus/thread.c (xnthread_init): Discard magic parameter as a
	consequence of the above change.

	* configure.in: Pass ARCH in RTAI_KBUILD_CMD.
