@@ -37,6 +37,16 @@ libmodule_SRC += event.c
 include_HEADERS += event.h
 endif
 
+if CONFIG_RTAI_OPT_NATIVE_MUTEX
+libmodule_SRC += mutex.c
+include_HEADERS += mutex.h
+endif
+
+if CONFIG_RTAI_OPT_NATIVE_COND
+libmodule_SRC += cond.c
+include_HEADERS += cond.h
+endif
+
 rtai_native$(modext): @RTAI_KBUILD_ENV@
 rtai_native$(modext): $(libmodule_SRC)
 	@RTAI_KBUILD_CMD@
