@@ -44,6 +44,10 @@ host_triplet = @host@
 @CONFIG_RTAI_OPT_NATIVE_SEM_TRUE@am__append_6 = sem.h
 @CONFIG_RTAI_OPT_NATIVE_EVENT_TRUE@am__append_7 = event.c
 @CONFIG_RTAI_OPT_NATIVE_EVENT_TRUE@am__append_8 = event.h
+@CONFIG_RTAI_OPT_NATIVE_MUTEX_TRUE@am__append_9 = mutex.c
+@CONFIG_RTAI_OPT_NATIVE_MUTEX_TRUE@am__append_10 = mutex.h
+@CONFIG_RTAI_OPT_NATIVE_COND_TRUE@am__append_11 = cond.c
+@CONFIG_RTAI_OPT_NATIVE_COND_TRUE@am__append_12 = cond.h
 ACLOCAL = @ACLOCAL@
 AMDEP_FALSE = @AMDEP_FALSE@
 AMDEP_TRUE = @AMDEP_TRUE@
@@ -69,8 +73,12 @@ CONFIG_RTAI_MAINT_PMA_TRUE = @CONFIG_RTAI_MAINT_PMA_TRUE@
 CONFIG_RTAI_MAINT_TRUE = @CONFIG_RTAI_MAINT_TRUE@
 CONFIG_RTAI_OLD_FASHIONED_BUILD_FALSE = @CONFIG_RTAI_OLD_FASHIONED_BUILD_FALSE@
 CONFIG_RTAI_OLD_FASHIONED_BUILD_TRUE = @CONFIG_RTAI_OLD_FASHIONED_BUILD_TRUE@
+CONFIG_RTAI_OPT_NATIVE_COND_FALSE = @CONFIG_RTAI_OPT_NATIVE_COND_FALSE@
+CONFIG_RTAI_OPT_NATIVE_COND_TRUE = @CONFIG_RTAI_OPT_NATIVE_COND_TRUE@
 CONFIG_RTAI_OPT_NATIVE_EVENT_FALSE = @CONFIG_RTAI_OPT_NATIVE_EVENT_FALSE@
 CONFIG_RTAI_OPT_NATIVE_EVENT_TRUE = @CONFIG_RTAI_OPT_NATIVE_EVENT_TRUE@
+CONFIG_RTAI_OPT_NATIVE_MUTEX_FALSE = @CONFIG_RTAI_OPT_NATIVE_MUTEX_FALSE@
+CONFIG_RTAI_OPT_NATIVE_MUTEX_TRUE = @CONFIG_RTAI_OPT_NATIVE_MUTEX_TRUE@
 CONFIG_RTAI_OPT_NATIVE_PIPE_FALSE = @CONFIG_RTAI_OPT_NATIVE_PIPE_FALSE@
 CONFIG_RTAI_OPT_NATIVE_PIPE_TRUE = @CONFIG_RTAI_OPT_NATIVE_PIPE_TRUE@
 CONFIG_RTAI_OPT_NATIVE_REGISTRY_FALSE = @CONFIG_RTAI_OPT_NATIVE_REGISTRY_FALSE@
@@ -220,14 +228,14 @@ libmodule_SRC = \
 	syscall.c \
 	task.c \
 	timer.c\
-$(am__append_1) $(am__append_3) $(am__append_5) $(am__append_7)
+$(am__append_1) $(am__append_3) $(am__append_5) $(am__append_7) $(am__append_9) $(am__append_11)
 
 include_HEADERS = \
 		task.h \
 		timer.h \
 		types.h \
 		syscall.h\
-$(am__append_2) $(am__append_4) $(am__append_6) $(am__append_8)
+$(am__append_2) $(am__append_4) $(am__append_6) $(am__append_8) $(am__append_10) $(am__append_12)
 
 EXTRA_DIST = Makefile.kbuild
 
